--- a/index.html
+++ b/index.html
@@ -13,33 +13,53 @@
     <div id="navbar">
       <h1>Children's Grassroots Football Universe</h1>
     </div>
+    <div id="controls">
+      <div class="nav-link-group">
+        <a href="parents/default.htm">Parents</a><br><br>
+        <a href="school/default.htm">School</a><br><br>
+        <a href="football-club/default.htm">Football Club</a><br><br>
+        <a href="coach/default.htm">Coach</a><br><br>
+      </div>
+      <div class="nav-link-group">
+        <a href="local-partners/default.htm">Local Partners</a><br><br>
+        <a href="municipality/default.htm">Municipality</a><br><br>
+        <a href="local-media/default.htm">Local Media</a><br><br>
+        <a href="local-donors/default.htm">Local Donors</a><br><br>
+      </div>
+      <div class="nav-link-group">
+        <a href="regional-football-association/default.htm">Regional Football Associations</a><br><br>
+        <a href="international-partners/default.htm">International Partners</a><br><br>
+        <a href="national-football-association/default.htm">National Football Association</a><br><br>
+        <a href="ministry-of-youth-and-sport/default.htm">Ministry of Youth and Sports</a><br><br>
+      </div>
+    </div>
     <div id="universe" class="scale-stretched">
       <div id="galaxy">
         <div id="solar-system" class="earth">
           <div id="mars" class="orbit">
             <div class="pos pos-1">
-              <a href="#" class="planet">
+              <a href="parents/default.htm" class="planet">
                 <dl class="infos">
                   <dd><span></span></dd>
                 </dl>
               </a>
             </div>
             <div class="pos pos-2">
-              <a href="#" class="planet">
+              <a href="school/default.htm" class="planet">
                 <dl class="infos">
                   <dd><span></span></dd>
                 </dl>
               </a>
             </div>
             <div class="pos pos-3">
-              <a href="#" class="planet">
+              <a href="coach/default.htm" class="planet">
                 <dl class="infos">
                   <dd><span></span></dd>
                 </dl>
               </a>
             </div>
             <div class="pos pos-4">
-              <a href="#" class="planet">
+              <a href="football-club/default.htm" class="planet">
                 <dl class="infos">
                   <dd><span></span></dd>
                 </dl>
@@ -48,28 +68,28 @@
           </div>
           <div id="jupiter" class="orbit">
             <div class="pos pos-1">
-              <a href="#" class="planet">
+              <a href="municipality/default.htm" class="planet">
                 <dl class="infos">
                   <dd><span></span></dd>
                 </dl>
               </a>
             </div>
             <div class="pos pos-2">
-              <a href="#" class="planet">
+              <a href="local-partners/default.htm" class="planet">
                 <dl class="infos">
                   <dd><span></span></dd>
                 </dl>
               </a>
             </div>
             <div class="pos pos-3">
-              <a href="#" class="planet">
+              <a href="local-media/default.htm" class="planet">
                 <dl class="infos">
                   <dd><span></span></dd>
                 </dl>
               </a>
             </div>
             <div class="pos pos-4">
-              <a href="#" class="planet">
+              <a href="local-donors/default.htm" class="planet">
                 <dl class="infos">
                   <dd><span></span></dd>
                 </dl>
@@ -78,7 +98,7 @@
           </div>
           <div id="saturn" class="orbit">
             <div class="pos pos-1">
-              <a href="#" class="planet">
+              <a href="international-partners/default.htm" class="planet">
                 <div class="ring"></div>
                 <dl class="infos">
                   <dd><span></span></dd>
@@ -86,7 +106,7 @@
               </a>
             </div>
             <div class="pos pos-2">
-              <a href="#" class="planet">
+              <a href="national-football-association/default.htm" class="planet">
                 <div class="ring"></div>
                 <dl class="infos">
                   <dd><span></span></dd>
@@ -94,7 +114,7 @@
               </a>
             </div>
             <div class="pos pos-3">
-              <a href="#" class="planet">
+              <a href="ministry-of-youth-and-sport/default.htm" class="planet">
                 <div class="ring"></div>
                 <dl class="infos">
                   <dd><span></span></dd>
@@ -102,7 +122,7 @@
               </a>
             </div>
             <div class="pos pos-4">
-              <a href="#" class="planet">
+              <a href="regional-football-association/default.htm" class="planet">
                 <div class="ring"></div>
                 <dl class="infos">
                   <dd><span></span></dd>
