--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
     <div id="universe" class="scale-stretched">
       <div id="galaxy">
         <div id="solar-system" class="earth">
+          <div id="earth" class="orbit">
+            <a href="regional-football-association/default.htm" class="pos extra-pos">
+              <div class="planet">
+                <dl class="infos">
+                  <dd><span></span></dd>
+                </dl>
+              </div>
+            </a>
+          </div>
           <div id="mars" class="orbit">
             <div class="pos pos-1">
               <a href="parents/default.htm" class="planet">
