the changes requested has been made

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
       <div id="galaxy">
         <div id="solar-system" class="earth">
           <div id="earth" class="orbit">
-            <a href="regional-football-association/default.htm" class="pos extra-pos">
-              <div class="planet">
+            <div class="pos extra-pos">
+              <a href="police/default.htm" class="planet">
                 <dl class="infos">
                   <dd><span></span></dd>
                 </dl>
-              </div>
-            </a>
+              </a>
+            </div>
           </div>
           <div id="mars" class="orbit">
             <div class="pos pos-1">
