the changes has been made

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   <body class="opening hide-UI view-2D zoom-large data-close controls-close">
     <div id="navbar">
       <h1>Children's Grassroots Football Universe</h1>
+      <a href="cross-culture/default.htm"><img src="images/cc-logo.png"></a>
     </div>
-    <div id="controls">
+    <!-- <div id="controls">
       <div class="nav-link-group">
         <a href="parents/default.htm">Parents</a><br><br>
         <a href="school/default.htm">School</a><br><br>
@@ -32,7 +33,8 @@
         <a href="national-football-association/default.htm">National Football Association</a><br><br>
         <a href="ministry-of-youth-and-sport/default.htm">Ministry of Youth and Sports</a><br><br>
       </div>
-    </div>
+    </div> -->
+    <p class="informatic-foot">*Click on the flying footballs to learn more</h3>
     <div id="universe" class="scale-stretched">
       <div id="galaxy">
         <div id="solar-system" class="earth">
@@ -139,7 +141,7 @@
               </a>
             </div>
           </div>
-          <a href="#" id="sun">
+          <a href="the-child/default.htm" id="sun">
           </a>
         </div>
       </div>
