--- a/the-child/openfunfootballschools2005.aspx.htm
+++ b/the-child/openfunfootballschools2005.aspx.htm
@@ -4,13 +4,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head><meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" /><title>
 	Open Fun Football Schools 2005 : Cross Cultures
-</title><link href="../css.css" type="text/css" rel="stylesheet" /></head>
+</title><link href="../css/css.css" type="text/css" rel="stylesheet" /></head>
 <body>
 <div id="main">
-	<a id="ball" href="../default.aspx.htm"><img src="../graphics/ball.gif" alt="" /></a>
-	<div id="nav"><h1>The Child</h1><ul><li><a href="default.aspx">Objectives and Strategy</a></li><li><a href="childrenintheopenfunfootballschools.aspx.htm">Children in the Open Fun Football Schools 1998-2005</a></li><li><a class="sel">Open Fun Football Schools 2005</a></li><li><a href="girlsparticipation.aspx.htm">Grils participation in the Open Fun Football Schools 1998-2005</a></li><li><a href="socialbalance.aspx.htm">Social Balance</a></li><li><a href="ethnicbalance.aspx.htm">Ethnic Balance</a></li><li><a href="followup.aspx.htm">Follow Up Initiatives 2005</a></li></ul>
+	<a id="ball" href="../index.html"><img src="../graphics/ball.gif" alt="" /></a>
+	<div id="nav"><h1>The Child</h1><ul><li><a href="default.htm">Objectives and Strategy</a></li><li><a href="childrenintheopenfunfootballschools.aspx.htm">Children in the Open Fun Football Schools 1998-2005</a></li><li><a class="sel">Open Fun Football Schools 2005</a></li><li><a href="girlsparticipation.aspx.htm">Grils participation in the Open Fun Football Schools 1998-2005</a></li><li><a href="socialbalance.aspx.htm">Social Balance</a></li><li><a href="ethnicbalance.aspx.htm">Ethnic Balance</a></li><li><a href="followup.aspx.htm">Follow Up Initiatives 2005</a></li></ul>
 </div>
-	<a id="logo" href="../../default.htm"><img src="../graphics/crosscultures.gif" alt="Cross Cultures Logo" /></a>
+	<a id="logo" href="../index.html"><img src="../graphics/crosscultures.gif" alt="Cross Cultures Logo" /></a>
 	<div id="content">
 		
 
@@ -34,4 +34,7 @@
 
 
 		</div>
-	</div></div></body></html>
+	</div>
+</div>
+</body>
+</html>
